[tool.poetry]
name = "pytorch-tutorials"
version = "0.1.0"
description = ""
authors = ["Kitsuya0828 <kitsuyaazuma@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_tutorials"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
torchvision = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
